# kafka

./: .gitignore  .gitmodules  Makefile.am  configure.ac
include/: KafkaClient.h
lib/: KafkaClient.cpp  Makefile.am
test/: Makefile.am  common.h  consumer.cpp  latency.cpp  producer.cpp  throughput.cpp
